@@ -1,4 +1,5 @@
 0.7.1
+- Hash checks: Replace exception with a user-friendly warning (#128)
 - Bugfixes:
   - Contour plot displays unused contour accuracy parameters
   - Persistent busy cursor when trace or video data is missing
